namespace DogApp.Modellayer.Model
{
    /// <summary>
    /// The class to create Dates
    /// </summary>
    public class DateCreate
    {
        /// <summary>
        /// The Id of the date class
        /// </summary>
        public int Id { get; set; }
        /// <summary>
        /// The property Datetime that allows to create a date
        /// </summary>
        public DateTime Date { get; set; }
    }
}
